--- a/loginsystem/views/base.ejs
+++ b/loginsystem/views/base.ejs
@@ -4,9 +4,9 @@
     <div class="container w-25 border py-5">
         <div class="title pb-5">
             <h2 class="font-weight-bold">Login</h2>
-            <span>Log in for exisiting user</span>
+            <span>Log in for existing user</span>
         </div>
-        <form action="#">
+        <form action="/route/login" method="POST">
             <div class="form-group">
                 <input type="username" class="form-control" placeholder="username" name="username">
                 &nbsp
