--- a/loginsystem/views/base.ejs
+++ b/loginsystem/views/base.ejs
@@ -4,7 +4,7 @@
     <div class="container w-25 border py-5">
         <div class="title pb-5">
             <h2 class="font-weight-bold">Login</h2>
-            <span>Log in for exisiting user</span>
+            <span>Log in for existing user</span>
         </div>
         <form action="#">
             <div class="form-group">
